<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DocumentsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutAddDocument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar_AddDocumentActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/activity_padding"
            android:theme="@style/App.ToolbarMenuItem"
            app:menu="@menu/menu_activity_documents"
            app:navigationIcon="@drawable/ic_back"
            app:title="New Document"
            app:titleCentered="false" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="@dimen/activity_padding"
                    android:padding="@dimen/icon_padding"
                    android:src="@drawable/ic_folder" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_padding"
                    android:hint="Document Name"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_DocumentName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_SelectDocument"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:onClick="showFileChooser"
                android:padding="10dp"
                android:text="Add Document"
                android:textColor="@color/color_secondary"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:icon="@drawable/ic_add"
                app:iconGravity="textStart"
                app:iconSize="@dimen/icon_size"
                app:iconTint="@color/color_secondary"
                app:rippleColor="@color/color_secondary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_SelectedDocuments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                tools:listitem="@layout/itemview_files" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/activity_padding"
                android:background="@color/color_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_padding"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_padding"
                    android:fontFamily="@font/open_sans_light"
                    android:text="@string/tags"
                    android:textColor="@color/color_text_title"
                    android:textStyle="bold" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup_AddDocument"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:checkedChip="@+id/chip_Documents_Other"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_Documents_PersonalDocument"
                        style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_Documents_Government"
                        style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/government"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_Documents_Education"
                        style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/education"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_Documents_PaymentBills"
                        style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bills"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_Documents_Insurance"
                        style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/insurance"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_Documents_Business"
                        style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_Documents_Finance"
                        style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finance"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_Documents_Medical"
                        style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medical"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_Documents_Other"
                        style="@style/Colors_Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textStyle="bold" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>